--- a/easy_admin/templates/add_question.html
+++ b/easy_admin/templates/add_question.html
@@ -23,7 +23,7 @@
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %} {{ form }}
                 <div class="d-flex">
-                    <button type="submit" class="btn btn-primary ml-auto">Tassyklamak</button>
+                    <button type="submit" class="btn btn-primary my-2 ml-auto">Tassyklamak</button>
                 </div>
             </form>
         </div>
