--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -9,6 +9,7 @@
             {% endblock title %}
         - IT meýdança Quizz</title>
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
         <link rel="stylesheet"
               href="{% static 'bootstrap-icons/font/bootstrap-icons.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/layout.css' %}">
