i did a lot of things, but i don't remember now, because i overdid it with smoking. sorry

--- a/easy_admin/static/css/layout.css
+++ b/easy_admin/static/css/layout.css
@@ -3,6 +3,15 @@
     src: url(/static/fonts/Overpass/Overpass-Regular.ttf);
 }
 
+.progress-bar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 4px;
+    width: 0%;
+    background: linear-gradient(to right, #6406fb, #8119a4);
+}
+
 .overpass {
     font-family: Overpass !important;
 }
