--- a/easy_admin/templates/main.html
+++ b/easy_admin/templates/main.html
@@ -18,13 +18,18 @@
                         id="menu">
                         <li class="nav-item">
                             <a href="{% url 'challenges' %}" class="nav-link align-middle px-0">
-                                <i class="bi-list"></i> <span class="ms-1 d-none d-sm-inline">Ýaryşlaryň netijeleri</span>
+                                <span class="ms-1 d-none d-sm-inline">Ýaryşlaryň netijeleri</span>
                             </a>
                         </li>
                         <li>
                             <a href="{% url 'editable_challenges' %}"
                                class="nav-link px-0 align-middle">
-                                <i class="bi-pen"></i> <span class="ms-1 d-none d-sm-inline">Ýaryşlary üýtgetmek</span> </a>
+                                <span class="ms-1 d-none d-sm-inline">Ýaryşlary üýtgetmek</span> </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'real_time_monitoring' %}"
+                               class="nav-link px-0 align-middle">
+                                <span class="ms-1 d-none d-sm-inline">Göni ýaýlymda yzarlamak</span> </a>
                         </li>
                     </ul>
                 </div>
