--- a/challenge/templates/views/home.html
+++ b/challenge/templates/views/home.html
@@ -34,6 +34,11 @@
                     </div>
                 </div>
             </div>
+        {% empty %}
+            <div class="text-center d-flex align-items-center justify-content-center"
+                 style="height: 80vh !important">
+                <h3>Işjeň test ýok</h3>
+            </div>
         {% endfor %}
     </div>
 {% endblock body %}
