challenge page restored. results page requires restoration work

--- a/challenge/templates/layouts/main.html
+++ b/challenge/templates/layouts/main.html
@@ -13,6 +13,9 @@
         <link rel='stylesheet'
               href="{% static 'challenge/css/bootstrap.min.css' %}">
         <link rel='stylesheet' href="{% static 'challenge/css/main.css' %}">
+        <link rel="shortcut icon"
+              href="{% static 'challenge/img/icon.png' %}"
+              type="image/png">
         {% block head %}
         {% endblock head %}
     </head>
