--- a/challenge/templates/layouts/empty.html
+++ b/challenge/templates/layouts/empty.html
@@ -15,6 +15,9 @@
         <link href="{% static 'challenge/css/bootstrap.min.css' %}"
               rel="stylesheet">
         <link href="{% static 'challenge/css/empty.css' %}" rel="stylesheet">
+        <link rel="shortcut icon"
+              href="{% static 'challenge/img/icon.png' %}"
+              type="image/png">
         {% block head %}
         {% endblock head %}
     </head>
