--- a/challenge/templates/views/home.html
+++ b/challenge/templates/views/home.html
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="row g-0 border rounded-1 overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static"
-                         onclick="location.href='{% if not challenge.with_confirmation %}/hello/{% else %}/confirmation/{{ challenge.id }}/{% endif %}';">
+                         onclick="location.href='{% if not challenge.with_confirmation %}challenge/{{ challenge.id }}/{% else %}/confirmation/{{ challenge.id }}/{% endif %}';">
                         <strong class="d-inline-block mb-2 text-ui-color">{{ challenge.questions_count }} sorag</strong>
                         <h3 class="mb-0">{{ challenge.name }}</h3>
                         <div class="mb-1 text-muted">Berlen wagt: {{ challenge.time_for_event }} minut</div>
